clang/test/BSC/Negative/Trait/GenericTrait/trait_cast_trait/trait_cast_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> {
  T foo(This *this);
};
trait G<T> {};

void test() {
  trait G<int> *g;
  trait F<int> *q = g; // expected-error {{expected a pointer type which has implemented 'trait F<int>', found 'struct __Trait_G<int>'}}
  trait F<int> *q1 = (trait F<int> *)g; // expected-error {{expected a pointer type which has implemented 'trait F<int>', found 'struct __Trait_G<int>'}}
  q = g; // expected-error {{assigning to 'struct __Trait_F<int>' from incompatible type 'trait G<int> *'}}
  q1 = (trait F<int> *)g; // expected-error {{assigning to 'struct __Trait_F<int>' from incompatible type 'trait G<int> *'}}
}